<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.lubovsky.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.lubovsky.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.lubovsky.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.lubovsky.mireaproject.Browser"
        android:label="fragment_browser"
        tools:layout="@layout/fragment_browser" />
    <fragment
        android:id="@+id/nav_calculator"
        android:name="ru.mirea.lubovsky.mireaproject.Calculator"
        android:label="fragment_calculator"
        tools:layout="@layout/fragment_calculator" />
    <fragment
        android:id="@+id/nav_musicPlayer"
        android:name="ru.mirea.lubovsky.mireaproject.MusicPlayer"
        android:label="fragment_music_player"
        tools:layout="@layout/fragment_music_player" />
    <fragment
        android:id="@+id/nav_sensors"
        android:name="ru.mirea.lubovsky.mireaproject.Sensors"
        android:label="fragment_sensors"
        tools:layout="@layout/fragment_sensors" />
    <fragment
        android:id="@+id/nav_makePhoto"
        android:name="ru.mirea.lubovsky.mireaproject.makePhoto"
        android:label="fragment_make_photo"
        tools:layout="@layout/fragment_make_photo" />
    <fragment
        android:id="@+id/nav_recordAudio"
        android:name="ru.mirea.lubovsky.mireaproject.recordAudio"
        android:label="fragment_record_audio"
        tools:layout="@layout/fragment_record_audio" />
    <fragment
        android:id="@+id/nav_stories"
        android:name="ru.mirea.lubovsky.mireaproject.Stories"
        android:label="fragment_stories"
        tools:layout="@layout/fragment_stories" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="ru.mirea.lubovsky.mireaproject.Settings"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_externalTime"
        android:name="ru.mirea.lubovsky.mireaproject.externalTime"
        android:label="fragment_external_time"
        tools:layout="@layout/fragment_external_time" />
</navigation>